refactor: refactoring HelloWorld Program
Signed-off-by: qkrtkdwns3410 <qkrtkdwns3410@gmail.com>